# RADJAX-Tome

./: .gitignore  HOW_TO_DO_A_T4_TOME_TEST.md  LICENSE  RADJAX_M3_M4_APPROVED_PLAN.md  README.md  README_ARCHIVE.md  bible.md  pyproject.toml
docs/: ARCHITECTURE.md  BIBLE.md  C6_INTEGRATION.md  CLI_GUIDE.md  CORPUS_BUILDER.md  CORPUS_SPLITS.md  CORRIDOR_ARCHETYPES_C1.md  CORRIDOR_BUDGET_C3.md  CORRIDOR_CLAIMS_C4.md  CORRIDOR_LEADERBOARDS_C2.md  FINGERPRINT_API.md  GOLDEN_1K_CAPTURE.md  GPU_INSTALL.md  GPU_RUN_PLANNER.md  HF_TEACHER_OPTIONAL.md  HYDRA_INVENTORY.md  IMPORT_BOUNDARIES.md  M4D_INTEGRATION_EVIDENCE.md  MAINLINE_CONSOLIDATION_ARC.md  MULTI_GPU_PATH_B.md  MULTI_ROLE_SELECTION_C5.md  PARITY_HARNESS.md  PRODUCTION_BUILD.md  RESEARCH_STATUS.md  ROADMAP.md  SPEC3_ROADMAP.md  STREAMING_RESUME.md  TEACHER_BACKENDS.md  TEACHER_MODEL_PROVENANCE.md  TOME_ARCHIVE_POINTERS.md  TOME_ARTIFACTS.md  TOME_BUILDER.md  TOME_BUILDER_AB_PARITY.md  TOME_BUNDLE.md  TOME_COVER_PAGE.md  TOME_GENERATION_CAPABILITY_MATRIX.json  TOME_GENERATION_CAPABILITY_MATRIX.md  TOME_GENERATOR_BULK_MIGRATION.md  TOME_GENERATOR_BULK_MIGRATION_MANIFEST.json  TOME_GENERATOR_CLOSURE_AUDIT.json  (+17 more)
quarantine/: README.md
scripts/: ab_compare_teacher_textbook.py  audit_tome_generator_closure.py  audit_tome_generator_extraction.py  audit_tome_refactor_surface.py  build_production_contract_fixture.py  build_teacher_textbook.py  build_teacher_tome.py  export_teacher_targets.py  inspect_fingerprint_artifact.py  inspect_prompt_corpus.py  inspect_targets.py  prove_tome_generation_capabilities.py  (+7 more)
(+483 files in other folders)
