[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radjax-tome"
version = "0.1.0"
description = "Teacher-side RADJAX artifact producer scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "PyYAML>=6.0",
  "radjax-contract @ git+https://github.com/nova-rey/RADJAX-Contract.git@main",
]

[project.optional-dependencies]
teacher-hf = [
  "torch>=2.2",
  "transformers>=4.40",
]
gpu-teacher = [
  "torch>=2.2",
  "transformers>=4.40",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
radjax-tome = "radjax_tome.cli.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
